# SlurmMonitor

./: README.md  main.py  pyproject.toml  test.py
modules/monitor/: monitor_slurm.py
modules/slackbot/: __init__.py
slurmmonitor/: __init__.py
slurmmonitor/monitor/: __init__.py  monitor_slurm.py
slurmmonitor/slackbot/: __init__.py  messenger.py
tests/: test_slurmmonitor.py
