[project]
name = "slurmmonitor"
version = "0.1.0"
description = "Monitor slurm jobs (primarily submitted to ORCD) using slack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["python-dotenv"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["slurmmonitor", "slurmmonitor.monitor", "slurmmonitor.slackbot"]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "pytest-mock>=3.12.0"]

[project.urls]
Repository = "https://github.com/tylerphilp/SlurmMonitor"
authors = "Tyler Philp"


